fix alignment and spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,16 +4,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,700;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
 
-* {
+/* styles */
+:root {
+  --topbar-height: 5vh;
   font-family: 'Fira Sans', sans-serif;
 }
 
-body {}
-
-:root {
-  --topbar-height: 5vh;
+a {
+  text-decoration: none;
+  color: #911;
 }
 
+a:hover {
+  box-shadow: 0 .2rem 0 0 #000;
+}
+
+/* nav */
 #site-nav {
   padding: .2rem .4rem;
   border-bottom: solid .1rem #911;
@@ -27,22 +33,7 @@ body {}
   padding: .2rem .4rem;
 }
 
-a {
-  text-decoration: none;
-  color: #911;
-}
-
-a:hover {
-  box-shadow: 0 .2rem 0 0 #000;
-}
-
-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #ccc;
-}
-
+/* post */
 .post-meta-entry {
   display: flex;
   align-items: center;
@@ -77,10 +68,6 @@ a.post-tag:hover {
   fill: none;
 }
 
-#content {
-  line-height: 1.6rem;
-}
-
 pre {
   padding: .8rem;
 }
@@ -107,6 +94,7 @@ blockquote {
 /* list */
 
 .taxonomy-list {
+  flex:1;
   display:flex;
   flex-flow:row;
 }
@@ -158,15 +146,29 @@ table tbody tr:nth-child(odd) {
   flex-flow: row nowrap;
 }
 
-#content {
+#main {
   flex: 1;
   display: flex;
   flex-flow: column nowrap;
-  align-items: start;
   padding: .2rem .4rem;
 
   max-width: 760px;
   margin: 0 auto;
+}
+
+header {
+  margin-bottom: 1rem;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ccc;
+}
+
+article {
+  line-height: 1.6rem;
 }
 
 #aside {
@@ -176,11 +178,6 @@ table tbody tr:nth-child(odd) {
   width: 180px;
   padding: 1rem;
   overflow-y: auto;
-}
-
-/* header */
-header {
-  margin-bottom: 2rem;
 }
 
 /* toc */
